# address-index-ui

./: .gitignore  CODEOWNERS  Dockerfile  LICENSE  README.md  deleteme.txtr  gconf.py  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_test.txt  run_ui_developer.py  setup.cfg  version.txt  wsgi.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: aims-diy-version-comparison.yml  build-and-push-image.yml  build-image-for-production.yml  build-image-for-testing.yml  check-aims-diy-version.yml  check-version-bump.yml  create-test-image.yml  merge-main.yml  pull-request-main.yml  python-app.yml  test-js-jest-unit-tests.yml  test-python-playwright-against-api-demo.yml  test-python-unit-tests.yml  test-workflow.yml  ui-playwright-tests.yml  ui-pytest-tests.yml  ui-yapf-formatting-tests.yml  version-bump-check.yml  yapf-linting-check.yml
api_demo/: README.md  docker-compose.yml
docs/: PULL_REQUEST_TEMPLATE.md
scripts/: design_system_version.txt  load_templates.bat  load_templates.sh  load_templates_windows.bat
src/aims_ui/: __init__.py  about.py  api_helpers.py  api_interaction.py  app.py  classification_utilities.py  cookie_utils.py  download_handler.py  google_utils.py  index.py  info.py  landing.py  logging.py  login.py  models.py  multiple_address_utils.py  multiple_match_lookup.py  page_address.py  page_address_info.py  page_custom_response.py  page_error.py  page_help.py  page_multiple_address.py  page_multiple_address_original.py  page_multiple_address_results.py  page_postcode.py  (+13 more)
tests/: test_aims_ui.py  test_flaskr.py
(+426 files in other folders)
